shellfirm/tests/snapshots/checks__network-stop-networking.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "network-stop-networking.yaml",
        test: "systemctl stop networking",
        check_detection_ids: [
            "network:stop_networking",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "network-stop-networking.yaml",
        test: "sudo systemctl stop networking",
        check_detection_ids: [
            "network:stop_networking",
        ],
        test_description: "match command with sudo",
    },
    TestSensitivePatternsResult {
        file_path: "network-stop-networking.yaml",
        test: "systemctl status networking",
        check_detection_ids: [],
        test_description: "should not match status command",
    },
    TestSensitivePatternsResult {
        file_path: "network-stop-networking.yaml",
        test: "systemctl restart networking",
        check_detection_ids: [],
        test_description: "should not match restart command",
    },
]
