shellfirm/tests/snapshots/checks__terraform-apply_with_auto_approve.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "terraform-apply_with_auto_approve.yaml",
        test: "terraform apply -auto-approve",
        check_detection_ids: [
            "terraform:apply_with_auto_approve",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "terraform-apply_with_auto_approve.yaml",
        test: "terraform    apply    -auto-approve",
        check_detection_ids: [
            "terraform:apply_with_auto_approve",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "terraform-apply_with_auto_approve.yaml",
        test: "terraform    apply    -auto-approv",
        check_detection_ids: [],
        test_description: "match command with spaces",
    },
]
