shellfirm/tests/snapshots/checks__terraform-state.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "terraform-state.yaml",
        test: "terraform state mv",
        check_detection_ids: [
            "terraform:state",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "terraform-state.yaml",
        test: "terraform state replace-provider",
        check_detection_ids: [
            "terraform:state",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "terraform-state.yaml",
        test: "terraform    state mv",
        check_detection_ids: [
            "terraform:state",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "terraform-state.yaml",
        test: "terraform state mv -dry-run",
        check_detection_ids: [],
        test_description: "skip during the -dry-run flag",
    },
    TestSensitivePatternsResult {
        file_path: "terraform-state.yaml",
        test: "terraform state replace-provider -dry-run",
        check_detection_ids: [],
        test_description: "skip during the -dry-run flag",
    },
]
