shellfirm/tests/snapshots/checks__terraform-workspace_delete_with_force_flag.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "terraform-workspace_delete_with_force_flag.yaml",
        test: "terraform workspace delete -lock-timeout=1 -force",
        check_detection_ids: [
            "terraform:workspace_delete_with_force_flag",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "terraform-workspace_delete_with_force_flag.yaml",
        test: "terraform   workspace   delete  - -force",
        check_detection_ids: [
            "terraform:workspace_delete_with_force_flag",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "terraform-workspace_delete_with_force_flag.yaml",
        test: "terraform workspace delete -lock-timeout=1",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
